--- a/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting.csproj
+++ b/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.18.1" />
+    <PackageReference Include="SemanticComparison" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
