--- a/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting.csproj
+++ b/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting/secretsAndEquivalenceTesting.csproj
@@ -9,7 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.1" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.18.1" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="SemanticComparison" Version="4.1.0" />
   </ItemGroup>
 
